# AutoLuaEngine

./: .gitignore  README.md
docs/: AI_EXECUTION_GUIDE.md  AI_执行指南.md  ANDROID_ENGINE_PROCESS_SPLIT.md  ANDROID_ImGui.md  ANDROID_Java互操作.md  ANDROID_ROOT_MODE.md  ANDROID_ROOT_模式.md  ANDROID_SO_截图核心.md  ANDROID_引擎进程拆分.md  ANDROID_脚本_UI.md  ANDROID_设备_API.md  API_CONTRACT.md  API_契约.md  ARCHITECTURE.md  BUILD_AND_RUN.md  LUA_多线程.md  OLD_PROJECT_REFERENCE.md  PC_抓图取色器_行为契约.md  PC_抓图取色器_重构核对.md  PC_抓图取色工具.md  PROJECT_PLAN.md  SCRIPT_MANUAL.md  USER_TODO.md  插件_SO_API.md  旧项目参考记录.md  构建与运行.md  架构设计.md  用户待办事项.md  脚本文档.html  脚本文档.md  项目总计划.md
docs/脚本文档/: catalog.json
docs/脚本文档/md/00-概述/: API总览.md  命名空间与别名.md  简介.md  类型约定.md
docs/脚本文档/md/01-全局/: getRunEnvType.md  print.md  sleep.md  systemTime.md  tickCount.md  useApi.md
docs/脚本文档/md/02-设备/: 概述.md
docs/脚本文档/md/03-Java/: LuaEngine.getContext.md  LuaEngine.httpGet.md  LuaEngine.httpPost.md  LuaEngine.httpPostData.md  LuaEngine.loadApk.md  import.md  概述与规则.md
docs/脚本文档/md/04-多线程/: beginThread.md  newThread.md  stopThread.md  模型与规则.md
docs/脚本文档/md/05-界面/: 概述.md
docs/脚本文档/md/06-脚本包/: read_alpkg_file.md  打包规则.md
docs/脚本文档/md/07-日志/: log.print.md
docs/脚本文档/md/08-输入/: inputText.md  keyDown.md  keyPress.md  keyUp.md  touchDown.md  touchMove.md  touchUp.md  概述.md
docs/脚本文档/md/09-输入法/: lock.md  setText.md  unlock.md  概述.md
docs/脚本文档/md/10-图像/: capture.md  getScreenPixels.md  keepCapture.md  releaseCapture.md  restoreScreenPixels.md  setCaptureCacheMs.md  setImageCacheMaxBytes.md  setScreenPixels.md  snapShot.md  找图.md  概述.md  清理图片缓存.md  缓存规则.md
docs/脚本文档/md/10-截图/: capture.md  keepCapture.md  releaseCapture.md  setCaptureCacheMs.md  缓存规则.md
docs/脚本文档/md/11-找色/: findColors.md
docs/脚本文档/md/12-C-ABI/: ImGui对应关系.md  声明.md  对应关系.md
docs/脚本文档/md/13-ImGui/: 回调线程与生命周期.md  图片样式与图形.md  布局与基础控件.md  常量表.md  框架与窗口.md  概述.md  选择控件与表格.md
docs/脚本文档/md/13-图像/: 保存截图.md  找图.md  概述.md  清理图片缓存.md
docs/脚本文档/md/14-OCR/: 加载内置模型.md  加载模型.md  找文字.md  概述.md  模型状态.md  识别图片.md  释放模型.md
engines/: README.md
engines/android/: build.gradle  settings.gradle
engines/android/app/: build.gradle
engines/android/app/src/main/cpp/: CMakeLists.txt  engine_jni.cpp
engines/android/app/src/main/cpp/core/: imgui_c_api.cpp  imgui_c_api.h  system_api.cpp  system_api.h  system_c_api.cpp  system_c_api.h
engines/android/app/src/main/cpp/core/api/: color_api.cpp  color_api.h  device_api.cpp  device_api.h  font_api.cpp  font_api.h  image_api.cpp  image_api.h  ime_api.cpp  ime_api.h  imgui_api.cpp  imgui_api.h  input_api.cpp  input_api.h  ocr_api.cpp  ocr_api.h  package_api.cpp  package_api.h  runtime_api.cpp  runtime_api.h  screen_api.cpp  screen_api.h  ui_api.cpp  ui_api.h
engines/android/app/src/main/cpp/engine/: engine.cpp  engine.h  engine_command.cpp  engine_command.h  engine_config.h  json_value.cpp  json_value.h  script_task.cpp  script_task.h
engines/android/app/src/main/cpp/platform/: android_bridge.cpp  android_bridge.h  imgui_renderer.cpp  imgui_renderer.h
engines/android/app/src/main/cpp/runtime/: host_api.cpp  host_api.h  image_store.cpp  image_store.h  log_buffer.h  lua_runtime.cpp  lua_runtime.h
engines/android/app/src/main/cpp/runtime/common/: image_store.cpp  image_store.h  log_buffer.cpp  log_buffer.h
engines/android/app/src/main/cpp/runtime/lua/: alpkg_package.cpp  alpkg_package.h  host_api.cpp  host_api.h  imgui_lua_api.cpp  imgui_lua_api.h  java_bridge.cpp  java_bridge.h  lua_runtime.cpp  lua_runtime.h  lua_task_scheduler.cpp  lua_task_scheduler.h  lua_thread_api.cpp  lua_thread_api.h
engines/ios/: README.md
engines/windows/: README.md
ide/: README.md
ide/vscode-extension/: README.md  package.json
ide/vscode-extension/src/: extension.js
ide/xiaoyv-tools/: CMakeLists.txt  README.md  构建.ps1
ide/xiaoyv-tools/formats/coordinate-list-js/: format.json  generator.js
ide/xiaoyv-tools/formats/coordinate-list-lua/: format.json  generator.lua
ide/xiaoyv-tools/formats/m-find-colors-js/: format.json  generator.js
ide/xiaoyv-tools/formats/m-find-colors-lua/: format.json  generator.lua
ide/xiaoyv-tools/src/: main.cpp  main_window.cpp  main_window.h
ide/xiaoyv-tools/src/canvas/: image_canvas.cpp  image_canvas.h  image_editor.cpp  image_editor.h
ide/xiaoyv-tools/src/capture/: desktop_capture.cpp  desktop_capture.h
ide/xiaoyv-tools/src/core/: image_processing.cpp  image_processing.h  selection_range.h
ide/xiaoyv-tools/src/device/: device_client.cpp  device_client.h  device_transport.cpp  device_transport.h
ide/xiaoyv-tools/src/dialogs/: connection_dialog.cpp  connection_dialog.h
ide/xiaoyv-tools/src/generator/: generator_engine.cpp  generator_engine.h
ide/xiaoyv-tools/src/model/: color_point_model.cpp  color_point_model.h  font_dictionary_document.cpp  font_dictionary_document.h  image_document.cpp  image_document.h
ide/xiaoyv-tools/src/panels/: analysis_panel.cpp  analysis_panel.h  color_panel.cpp  color_panel.h  font_dictionary_editor.cpp  font_dictionary_editor.h  font_panel.cpp  font_panel.h  script_editor_panel.cpp  script_editor_panel.h
ide/xiaoyv-tools/src/ui/: action_catalog.h  app_theme.cpp  app_theme.h  color_input.cpp  color_input.h  compact_dock_widget.cpp  compact_dock_widget.h  instant_tooltip_filter.h  pixel_grid.cpp  pixel_grid.h  range_editor.cpp  range_editor.h  tool_icons.cpp  tool_icons.h
ide/xiaoyv-tools/src/workspace/: image_workspace.cpp  image_workspace.h
ide/xiaoyv-tools/tests/: app_smoke_test.cpp  architecture_rules.cmake  device_client_test.cpp  model_tests.cpp  ui_tests.cpp
shared/: README.md
shared/native/image_core/: image_core.cpp  image_core.h
shared/package/: ALPKG_格式.md  alpkg_crypto.c  alpkg_crypto.h
shared/protocol/: ENGINE_PROTOCOL.md
tools/: README.md  检查脚本文档.ps1
tools/android/: run_lua_http.ps1  verify_debug.ps1
tools/pack/: CMakeLists.txt  README.md  打包脚本包.ps1  构建打包器.ps1
tools/pack/src/: pack_main.cpp
tools/pack/示例项目/: alpkg.json  main.lua
tools/pack/示例项目/modules/: message.lua
tools/pack/示例项目/ui/: app.js  index.html  style.css
(+319 files in other folders)
